Updated layout and fixed alignment issues.

--- a/webapp/Index.css
+++ b/webapp/Index.css
@@ -1,6 +1,10 @@
-div.hidden
-{
+.hidden {
     display: none
+}
+
+*{
+	margin: 0px;
+	padding:0px;
 }
 
 body {
@@ -29,45 +33,67 @@ body {
 }
 
 .main {
-	margin: 0 auto;
+	/*margin-left: 15px;*/
+	margin-right: 0 auto;
 	margin-top: 120px;
-	font-size: 28px;
 	font-family: 'Exo 2', sans-serif;
 }
 
-.main p {
-	color: orange;
+.main input {
+	font-weight: bold;
 }
 
 .main h1 {
 	color: orange;
 	font-size: 80px;
+	text-align: center;
 }
-
-
 
 .firstbar {
 	font-family: 'Exo 2', sans-serif;
 	color: orange;
-	margin:40px;
-	padding-left: 140px;
+	text-align: center;
+	margin-top: 30px;
 }
 
-.login {
-	padding-left:20px;
-	padding-right: 20px;
-	margin-left:84px;
+#myForm {
+	text-align:center;
 }
 
-#usertext {
-	margin-bottom: 10px;
-	margin-top: 10px;
-	margin-left :82px;
+#username-box {
+	margin:5px;
+	margin-top:25%;
+}
+#password-box {
+	margin:5px;
+}
+#login_button {
+	height:42px;
+	width: 246px;
+	text-align: center;
+	font-size: 22px;
 }
 
+#username{
+	height:42px;
+	width:70%;
+	text-align: center;
+	font-size: 22px;
+	
+}
 
+#password{
+	height:42px;
+	width:70%;
+	text-align: center;
+	font-size: 22px;
+}
 
-#welcomemessage {
-  margin-left: 45px;
+ #welcomemessage {
+  text-align:center;
   color: orange;
-}
+} 
+
+
+
+
